--- a/src/stylesheets/BlogPost.module.sass
+++ b/src/stylesheets/BlogPost.module.sass
@@ -6,9 +6,8 @@
   max-width: $blog-width
   margin-left: auto
   margin-right: auto
-  +screen(small)
-    margin-left: 20px
-    margin-right: 20px
+  padding-left: 15px
+  padding-right: 15px
   p
     font-size: 16px
   h1
@@ -70,6 +69,7 @@
     margin-bottom: 40px
 
 .footerStyle
+  max-width: $blog-width
   padding-bottom: 20px
 
 .blogPostDark
